syntax = "proto3";
package raftpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "github.com/vearch/vearch/proto/pspb/api.proto";

option go_package = "raftpb";

option optimize_for = SPEED;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = false;
option (gogoproto.benchgen_all) = false;
option (gogoproto.goproto_getters_all) = false;

enum CmdType {
	WRITE = 0;
	UPDATESPACE = 1;
	FLUSH = 2;
}

message RaftCommand {
	CmdType type = 1;
	DocCmd write_command = 2 [(gogoproto.nullable) = true];
	UpdateSpace update_space = 3 [(gogoproto.nullable) = true];
}

message SnapData {
	bytes key = 1;
	bytes value = 2;
}

